# RLPrototype

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
src/: CMakeLists.txt  assets.cpp  assets.h  data_file.cpp  data_file.h  ecs.cpp  ecs.h  game.cpp  game.h  main.cpp  sdl_wrapper.cpp  sdl_wrapper.h  tile_set.cpp  tile_set.h  world.cpp  world.h
test/: CMakeLists.txt  data_file_test.cpp  ecs_test.cpp  sample_test.cpp
